added pdf conversion of html

--- a/PDF_generator/output_reports/test_report.html
+++ b/PDF_generator/output_reports/test_report.html
@@ -16,7 +16,7 @@
             <link rel="stylesheet" href="../CSS/ssts_main.css" type="text/css">
             <link rel="stylesheet" href="../CSS/about.css" type="text/css">
             <link rel="stylesheet" href="../CSS/font-awesome.min.css" type="text/css">
-            <link rel="stylesheet" href="../CSS/page.css" type="text/css">
+            <!--<link rel="stylesheet" href="../CSS/page.css" type="text/css">-->
             <!-- Google file icons -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             <!--D3-->
@@ -42,7 +42,7 @@
             <div id="MathJax_Message" style="display: none;"></div>
             <header class="masthead">
                 <h3 class="masthead-title" style="display: flex;justify-content: left; align-items: center;">
-                    <img src="../header_images/logo_libphys.png" style="display: inline-block; max-height: 5%; max-width: 5%">
+                    <img src="/media/jeanraltique/FishStory/Projectos/Doutoramento/PhDCode/PhDProject/PDF_generator/example.png">
                     <a style="display: inline-block; padding-left: 3%">{{header_title}}</a>
                     <!--<a>{{header_title}}</a>-->
                     <small class="masthead-subtitle"></small>
