started feature set of annotation

--- a/PDF_generator/html_templates/libphys.html
+++ b/PDF_generator/html_templates/libphys.html
@@ -11,16 +11,16 @@
             <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
             <!--<meta charset="utf-8">-->
 
-            <link rel="stylesheet" href="/media/jeanraltique/FishStory/Projectos/Doutoramento/PhDCode/PhDProject/PDF_generator/CSS/main.css" type="text/css">
+            <link rel="stylesheet" href="../PDF_generator/CSS/main.css" type="text/css">
             <!--<link rel="stylesheet" href="../CSS/syntax.css" type="text/css">-->
             <!--<link rel="stylesheet" href="../CSS/ssts_main.css" type="text/css">-->
             <!--<link rel="stylesheet" href="../CSS/about.css" type="text/css">-->
-            <link rel="stylesheet" href="/media/jeanraltique/FishStory/Projectos/Doutoramento/PhDCode/PhDProject/PDF_generator/CSS/font-awesome.min.css" type="text/css">
+            <link rel="stylesheet" href="../PDF_generator/CSS/font-awesome.min.css" type="text/css">
             <!--<link rel="stylesheet" href="../CSS/page.css" type="text/css">-->
             <!-- Google file icons -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             <!--D3-->
-            <script src="/media/jeanraltique/FishStory/Projectos/Doutoramento/PhDCode/PhDProject/PDF_generator/fili.js-master/dist/fili.min.js"></script>
+            <script src="../PDF_generator/fili.js-master/dist/fili.min.js"></script>
             <script src="https://d3js.org/d3.v4.min.js"></script>
             <script src="https://d3js.org/d3-selection-multi.v0.4.min.js"></script>
             <script src='https://npmcdn.com/babel-core@5.8.34/browser.min.js'></script>
@@ -39,27 +39,22 @@
     </head>
     <body>
 
+<!--        <header>-->
+<!--&lt;!&ndash;            <h3 class="header_title">&ndash;&gt;-->
+<!--&lt;!&ndash;            <img class="header_img" src="../PDF_generator/header_images/logo_libphys.png">&ndash;&gt;-->
+<!--            <p>Report</p>-->
+<!--&lt;!&ndash;            </h3>&ndash;&gt;-->
+<!--        </header>-->
 
-                <thead>
-                    <h3 class="masthead-title">
-                    <img class="masthead-img" src="/media/jeanraltique/FishStory/Projectos/Doutoramento/PhDCode/PhDProject/PDF_generator/header_images/logo_libphys.png">
-                    <a style="display: inline-block; padding-left: 3%">Report</a>
-                    </h3>
-                </thead>
-
-                <div class="container">
-                    {{next_o}}
-                </div>
-
-                <div class="footer-space">&nbsp;</div>
-
-
-
-
-
-
-
-
+<!--        <section>-->
+        <div class="container">
+            {{next_o}}
         </div>
+<!--        </section>-->
+
+
+<!--        <footer></footer>-->
+
+
     </body>
 </html>
